<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="500px"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="left"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">


            <com.soonvein.cloud.base.ClearEditText
                android:id="@+id/etPhoneNum"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_view_height"
                android:maxLength="11"
                android:digits="1234567890"
                android:background="@drawable/textview_style"
                android:gravity="center_vertical|left"
                android:drawablePadding="10dp"
                android:textCursorDrawable="@null"
                android:hint="@string/hint_phone_11"
                android:drawableLeft="@drawable/phone"
                android:padding="10dp"
                android:text=""
                android:textSize="@dimen/main_text_size" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="46px"
            android:gravity="center_vertical">



                <com.soonvein.cloud.base.ClearEditText
                    android:id="@+id/etCost"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_view_height"
                    android:background="@drawable/textview_style"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/expense"
                    android:gravity="center_vertical|left"
                    android:textCursorDrawable="@null"
                    android:hint="@string/hint_cost"
                    android:padding="10dp"
                    android:text=""
                    android:textSize="@dimen/main_text_size" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="46px"
            android:gravity="center_vertical">


            <com.soonvein.cloud.base.ClearEditText
                android:id="@+id/etRemark"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_view_height"
                android:background="@drawable/textview_style"
                android:gravity="center_vertical|left"
                android:drawableLeft="@drawable/remark"
                android:drawablePadding="10dp"
                android:hint="@string/hint_remark"
                android:textCursorDrawable="@null"
                android:padding="10dp"
                android:text=""
                android:textSize="@dimen/main_text_size" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="700px"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="50px"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="120px"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/pay_keypad_1"
                android:layout_width="200px"
                android:layout_height="110px"
                android:textColor="@color/black"
                android:background="@drawable/number_btn_bg"
                android:layout_marginRight="10px"
                android:layout_marginBottom="10px"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/digitKeyppad_one"
                android:textSize="@dimen/text_size_40sp" >
            </Button>
            <Button
                android:id="@+id/pay_keypad_2"
                android:layout_width="200px"
                android:layout_height="110px"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@drawable/number_btn_bg"
                android:layout_marginRight="10px"
                android:layout_marginBottom="10px"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/digitKeyppad_two"
                android:textSize="@dimen/text_size_40sp" >
            </Button>

            <Button
                android:id="@+id/pay_keypad_3"
                android:layout_width="200px"
                android:layout_height="110px"
                android:background="@drawable/number_btn_bg"
                android:layout_marginRight="10px"
                android:layout_marginBottom="10px"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/digitKeyppad_three"
                android:textSize="@dimen/text_size_40sp" >
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="120px"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/pay_keypad_4"
                android:layout_width="200px"
                android:layout_height="110px"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@drawable/number_btn_bg"
                android:layout_marginRight="10px"
                android:layout_marginBottom="10px"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/digitKeyppad_four"
                android:textSize="@dimen/text_size_40sp" >
            </Button>

            <Button
                android:id="@+id/pay_keypad_5"
                android:layout_width="200px"
                android:layout_height="110px"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@drawable/number_btn_bg"
                android:layout_marginRight="10px"
                android:layout_marginBottom="10px"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/digitKeyppad_five"
                android:textSize="@dimen/text_size_40sp" >
            </Button>

            <Button
                android:id="@+id/pay_keypad_6"
                android:layout_width="200px"
                android:layout_height="110px"
                android:textColor="@color/black"
                android:background="@drawable/number_btn_bg"
                android:layout_marginRight="10px"
                android:layout_marginBottom="10px"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/digitKeyppad_six"
                android:textSize="@dimen/text_size_40sp" >
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="120px"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/pay_keypad_7"
                android:layout_width="200px"
                android:layout_height="110px"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@drawable/number_btn_bg"
                android:layout_marginRight="10px"
                android:layout_marginBottom="10px"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/digitKeyppad_seven"
                android:textSize="@dimen/text_size_40sp" >
            </Button>

            <Button
                android:id="@+id/pay_keypad_8"
                android:layout_width="200px"
                android:layout_height="110px"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_weight="1"
                android:background="@drawable/number_btn_bg"
                android:layout_marginRight="10px"
                android:layout_marginBottom="10px"
                android:gravity="center"
                android:text="@string/digitKeyppad_eight"
                android:textSize="@dimen/text_size_40sp" >
            </Button>

            <Button
                android:id="@+id/pay_keypad_9"
                android:layout_width="200px"
                android:layout_height="110px"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@drawable/number_btn_bg"
                android:layout_marginRight="10px"
                android:layout_marginBottom="10px"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/digitKeyppad_nine"
                android:textSize="@dimen/text_size_40sp" >
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="130px"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/pay_keypad_delect"
                android:layout_width="200px"
                android:layout_height="120px"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@drawable/delect_btn_bg"
                android:layout_marginRight="10px"
                android:layout_marginBottom="10px"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/text_size_40sp" >
            </Button>

            <Button
                android:id="@+id/pay_keypad_0"
                android:layout_width="200px"
                android:layout_height="110px"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_weight="1"
                android:background="@drawable/number_btn_bg"
                android:layout_marginRight="10px"
                android:layout_marginBottom="10px"
                android:gravity="center"
                android:text="@string/digitKeyppad_zero"
                android:textSize="@dimen/text_size_40sp" >
            </Button>

            <Button
                android:id="@+id/pay_keypad_ok"
                android:layout_width="200px"
                android:layout_height="110px"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@drawable/ok_btn_bg"
                android:layout_marginRight="10px"
                android:layout_marginBottom="10px"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/digitKeyppad_ok"
                android:textSize="@dimen/text_size_40sp" >
            </Button>
        </LinearLayout>
    </LinearLayout>

    <View
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="0.2"/>

</LinearLayout>