<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/login_bg"
    android:clickable="true"
    android:id="@+id/tracerout_rootview"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#51ffffff"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <ImageView
            android:layout_marginTop="104px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo"
            android:visibility="invisible"
            android:id="@+id/imageView" />

        <LinearLayout
            android:layout_width="462px"
            android:layout_height="553px"
            android:layout_marginTop="40px"
            android:gravity="center_horizontal"
            android:background="@drawable/login_layout_bg"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/service_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48px"
                android:textColor="#888888"
                android:textSize="30px"
                android:text="登录设备账号"/>

            </LinearLayout>
            <View
                android:layout_width="180px"
                android:layout_marginTop="8px"
                android:layout_height="1dip"
                android:background="#9e9e9f"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/tv_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="20px"
                android:layout_marginLeft="30px"
                android:layout_marginBottom="4px"
                android:textSize="25px"
                android:textColor="@color/black"
                android:text="请输入设备ID："/>

            <com.soonvein.cloud.base.ClearEditText
                android:id="@+id/deviceID"
                style="@style/edittext_normal"
                android:layout_width="413px"
                android:layout_height="86px"
                android:inputType="textCapCharacters"
                android:background="@drawable/clearedittext_bg"
                android:drawablePadding="10dp"
                android:textCursorDrawable="@null"
                android:hint="@string/deviceID"
                android:textSize="30sp"
                android:textColor="@drawable/edit_tv_color"
                android:padding="18px"
                android:drawableLeft="@drawable/login_id_btn"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/error_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30px"
                android:textColor="@color/colorText"
                android:layout_alignParentRight="true"
                android:textSize="25px"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/tv_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="25px"
                android:textColor="@color/black"
                android:layout_marginBottom="4px"
                android:layout_marginLeft="30px"
                android:text="请输入登录密码："/>
            <com.soonvein.cloud.base.ClearEditText
                android:id="@+id/devicePwd"
                style="@style/edittext_normal"
                android:layout_width="413px"
                android:layout_height="86px"
                android:background="@drawable/clearedittext_bg"
                android:textCursorDrawable="@null"
                android:textColor="@drawable/edit_tv_color"
                android:textSize="30sp"
                android:hint="@string/deviceCode"
                android:padding="18px"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/login_pwd_btn"
                android:inputType="textPassword"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/error_PWD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30px"
                    android:layout_alignParentRight="true"
                    android:textSize="25px"
                    android:textColor="@color/colorText"/>
            </RelativeLayout>
            <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="90px"
            android:layout_gravity="center"
            android:background="@drawable/login_btn_bg"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_40sp" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20px"
            android:layout_marginLeft="30px">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C8C9CA"
            android:drawableLeft="@drawable/version"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:textSize="20dp"
            android:gravity="center_vertical"
            android:padding="20px"
            android:text="@string/copyright_str"
            android:id="@+id/versoin_tv" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>